@@ -15,6 +15,8 @@ not yet  BJH  Release 10.52.00
               Mac OS X, because pnmtopng per se doesn't know about libz --
               it's used by libpng.
 
+              ppmtompeg: fix crash with free of unallocated memory.
+
               Build: don't fail due to SIGRTMIN, SIGRTMAX being undefined.
 
               Build: don't expect snprintf() to exist.
